--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- <color name="colorPrimary">#6200EE</color> -->
     <color name="colorPrimary">#CD694F</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimaryDark">#CD694F</color>
+    <color name="colorAccent">#CD694F</color>
     <color name="colorWhite">#FFFF</color>
 </resources>
